--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -20,7 +20,7 @@
 }
 
 .nav__item a.active__link{
-color: var(--secondary-color);
+color: burlywood;
 }
 
 .mobile__menu{
@@ -32,10 +32,24 @@ color: var(--secondary-color);
     width: 100%;
     height: 80px;
     line-height: 80px;
-    background: #7d88dd;
+    background: white;
     position: sticky;
     top: 0;
     left: 0;
-    box-shadow: 3px 3px 8px --3px #ddd;
+    box-shadow: 3px 3px 8px -3px #ddd;
     z-index: 999;
 }
+
+.primary__btn {
+    background-color: #a6c3e3 !important; /* Blue color for Register button */
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
