--- a/frontend/src/shared/search.bar.css
+++ b/frontend/src/shared/search.bar.css
@@ -1,8 +1,8 @@
 .search__bar{
     padding: 0.5rem 1rem;
     align-items: center;
-    border-radius: 50px;
-    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    border-radius: 1.5rem;
+    border: 1px solid #86b8ed;
     width: max-content;
     margin-top: 50px;
 }
