--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -1,5 +1,5 @@
 .login__img{
-    widht: 60%;
+    width: 60%;
     text-align: center;
 }
 
@@ -10,8 +10,9 @@
 
 .login__form{
     padding: 50px;
-    background: var(--secondary-color);
+    background:#86B8ED;
     position: relative;
+    border-radius: 10px;
 
 }
 
@@ -45,7 +46,7 @@
 
 
 .login__form input{
-    widht:100%;
+    width:100%;
     padding: 0.5rem 1rem;
     border-radius: 5px;
     border: none;
