--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -6,3 +6,14 @@
 .featured__tour-title{
     font-size: 2.2rem;
 }
+
+/*.homec {
+    background-image: url('../assets/images/bgimg2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+  }*/
+  
+  
