--- a/frontend/src/styles/register.css
+++ b/frontend/src/styles/register.css
@@ -1,23 +1,62 @@
-.regtitle{
-    color: black;
+.reg__img{
+    width: 60%;
+    text-align: center;
+    height: 80%;
 }
-.regc {
-    border-radius: 4rem !important;
-    border: 2px solid #86b8ed;
+
+.reg__img img{
+    width: 70%;
+    object-fit: contain;
+}
+
+.reg__form{
+    padding: 50px;
+    background: #86b8ed;
+    position: relative;
+    border-radius: 10px;
+}
+
+.reg__container{
+    box-shadow: rgba(17,12,46,0.15) 0px 48px 100px 0px;
+    margin-top: 100px;
+}
+
+.reg__container .user{
+    width:80px;
+    height:80px;
+    position: absolute;
+    top: -9%;
+    left:50% ;
+    transform: translate(-50%, -9%);
+}
+
+.reg__form .user img{
+    width: 100%;
+}
+
+.reg__form h2{
+    color: #fff;
+    text-align: center;
+    margin-bottom: 2rem;
 }
 
 .regbtn{
-    background: #86b8ed !important;
+    background: #091966 !important;
+    width: 100%;
+    color: #fff !important;
 }
 
-.regbtn:hover{
-    background: #549ce8 !important;
+.reg__form p{
+    font-size: .9rem;
+    color:#fff;
+    margin-top: 1.5rem;
+    text-align: center;
 }
 
-.loginbtn{
-    background: #86b8ed !important;
+.reg__form p{
+    color: var(--heading-color);
+    text-decoration: none;
+    margin-left:5px;
+    font-weight:500;
 }
 
-.loginbtn:hover{
-    background: #549ce8 !important;
-}
